--- a/css/util.style.css
+++ b/css/util.style.css
@@ -51,19 +51,18 @@
 .hover-overlay
 {
     position: absolute;
-    inset: 0;
+    display: block;
+    /* inset: 0; */
     z-index: 1;
     opacity: 0;
+
+    width: 100%;
+    height: 100%;
 
     transition: opacity var(--animation-time) ease;
 }
 
 .hover-overlay:hover
 {
-    position: absolute;
-    inset: 0;
-    z-index: 1;
     opacity: 1;
-
-    width: 45vw;
 }
